--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
 <!-- Feel free to change this text here -->
 <p>
+  Holy smokes, this person is coocoo!!!
+</p>
+<p>
   Fork me? Fork you, @octocat!
 </p>
 
